--- a/Experience/budget_experiences.html
+++ b/Experience/budget_experiences.html
@@ -39,9 +39,9 @@
 
         <div class="registration">
             <a href="" class="r_fa"><i class="fa fa-shopping-cart mr-4"></i></a>
-            <a class="mr-3 lg" href="">Login</a>
-            <a class="rg mr-4" href="">Register</a>
-            <!-- <a href="#"><i class="fa fa-user-circle"></i></a> -->
+            <a class="mr-3 lg" href="../Registration/login.html">Login</a>
+            <a class="rg mr-4" href="../Registration/register.html">Register</a>
+            <!-- <a href="../Customer Profile/profile.html"><i class="fa fa-user-circle"></i></a> -->
         </div>
       </div>
     </nav>
