--- a/Experience/Details.html
+++ b/Experience/Details.html
@@ -30,7 +30,7 @@
             <a class="nav-link nv-l" href="#">Accomodation</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nv-l" href="Experience.html">Experiences</a>
+            <a class="nav-link nv-l" href="../Experience/Experience.html">Experiences</a>
           </li>
           <li class="nav-item">
             <a class="nav-link nv-l" href="#">Flights</a>
@@ -39,9 +39,9 @@
 
         <div class="registration">
             <a href=""><i class="fa fa-shopping-cart mr-4"></i></a>
-            <a class="mr-3 lg" href="">Login</a>
-            <a class="rg mr-4" href="">Register</a>
-            <!-- <a href="#"><i class="fa fa-user-circle"></i></a> -->
+            <a class="mr-3 lg" href="../Registration/login.html">Login</a>
+            <a class="rg mr-4" href="../Registration/register.html">Register</a>
+            <!-- <a href="../Customer Profile/profile.html"><i class="fa fa-user-circle"></i></a> -->
         </div>
       </div>
     </nav>
